--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site settings
-title: Clean Blog
+title: MitchBox
 header-img: img/home-bg.jpg
-email: your-email@yourdomain.com
-description: "Write your site description here. It will be used as your sites meta description as well!"
-baseurl: "/startbootstrap-clean-blog-jekyll"
-url: "http://yourdomain.com"
-twitter_username: SBootstrap
-github_username:  davidtmiller
-facebook_username:  IronSummitMedia
+email: 
+description: "Dev Notes"
+baseurl: ""
+url: "http://mitchbox.github.io"
+twitter_username: 
+github_username:  mitchbox
+facebook_username:  
 
 # Build settings
 markdown: kramdown
