--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ header-img: img/home-bg.jpg
 email: 
 description: "Dev Notes"
 baseurl: ""
-url: "http://mitchbox.github.io/mitch-test"
+url: "http://mitchbox.github.io"
 twitter_username: 
 github_username:  mitchbox
 facebook_username:  
